--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -6,13 +6,13 @@
       <%= f.text_area :text,
                       placeholder: 'Wat zei die lul?',
                       rows: 2,
-                      class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 mt-2 block w-full sm:text-sm border border-gray-300 rounded-md' %>
+                      class: 'focus:ring-hamers-red-500 focus:border-hamers-red-500 mt-2 block w-full sm:text-sm border border-gray-300 rounded-md' %>
       <div class="col-span-6 sm:col-span-3">
         <% users_array = User.all.reverse.map { |user| [user.name, user.id] } %>
-        <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm' %>
+        <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm' %>
       </div>
       <div class="py-2">
-        <%= f.submit 'Citeer', class: "w-full inline-flex items-center justify-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white border border-gray-300 text-gray-700 bg-white hover:bg-gray-50" %>
+        <%= f.submit 'Citeer', class: "w-full inline-flex items-center justify-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white border border-gray-300 text-gray-700 bg-white hover:bg-gray-50" %>
       </div>
     <% end %>
   </div>
