Create usergroup#show page (#281)
* Create usergroup show page

* Do not hardcode usergroup ids

* Import seeds from staging (except for the group logos)

* Also show old members of a group

* Fix test possibly?

* Comment

* Feedback

* Proper include

* Revert unrelated changes

* Merge fix

* Suggestion

Co-authored-by: Jacko Zuidema <jackozi@users.noreply.github.com>

* Where.first

Co-authored-by: Jacko Zuidema <jackozi@users.noreply.github.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -121,3 +121,6 @@
   </div>
 
 </div>
+
+<!-- Lelijk maar ff handig voor debuggen. Deze pagina moet nog helemaal herschreven worden dus is moeite nu niet waard om het er goed in te zetten. -->
+<%= @user.lid_since %>
