--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,19 @@
         <%= render 'layouts/nav' %>
 
         <% if content_for?(:title) %>
-          <header class="py-8">
+          <header class="pt-2 pb-4 lg:pt-8 lg:pb-12">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
               <div class="flex flex-wrap">
                 <div class="flex-auto mr-2">
+                  <%= render 'shared/breadcrumbs' %>
                   <h1 class="text-3xl font-bold text-white">
                     <%= yield :title %>
                   </h1>
-                  <div class="py-2">
-                    <%= render 'shared/breadcrumbs' %>
-                  </div>
+                  <% if content_for?(:subtitle) %>
+                    <div class="mt-1 flex flex-col -mb-6 sm:flex-row sm:flex-wrap sm:mt-0 sm:space-x-6">
+                      <%= yield :subtitle %>
+                    </div>
+                  <% end %>
                 </div>
                 <div class="flex-grow flex-row-reverse max-w-md place-self-center">
                   <%= yield :search %>
