--- a/app/views/usergroups/_group.html.erb
+++ b/app/views/usergroups/_group.html.erb
@@ -11,7 +11,9 @@
       <div class="min-w-0 flex-1 sm:flex sm:items-center sm:justify-between">
         <div class="truncate">
           <div class="flex text-sm">
-            <p class="font-medium text-hamers-red-500 truncate"><%= group.name %></p>
+            <p class="font-medium text-hamers-red-500 truncate">
+              <%= link_to group.name, group %>
+            </p>
           </div>
         </div>
         <div class="mt-4 flex-shrink-0 sm:mt-0 sm:ml-5">
