--- a/app/views/blogitems/show.html.erb
+++ b/app/views/blogitems/show.html.erb
@@ -3,11 +3,7 @@
 <% end %>
 <div class="row">
   <div class="col-md-9">
-    <% if @item.actiontext_body.blank? %>
-      <%= markdown(@item.body).html_safe unless @item.body == nil %>
-    <% else %>
-      <%= @item.actiontext_body %>
-    <% end %>
+    <%= @item.body %>
   </div>
   <div class="col-md-3">
     <div class="panel panel-default">
