Move buttons to new search area and some layout (hovering) fixes

--- a/app/views/usergroups/_group.html.erb
+++ b/app/views/usergroups/_group.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <div class="block hover:bg-gray-50">
+  <div class="block hover:bg-gray-50 rounded-xl">
     <div class="px-4 py-4 flex items-center sm:px-6">
       <div class="min-w-0">
         <% if group.logo.attached? %>
