--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -3,17 +3,12 @@
 <% end %>
 
 <% if current_user.admin? %>
-  <div class="flex flex-row-reverse">
+  <% content_for :search do %>
     <%= link_to 'Voeg groep toe', new_usergroup_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
-  </div>
-  <div class="relative md:my-4 -mx-6">
-    <div class="absolute inset-0 flex items-center">
-      <div class="w-full border-t border-gray-200"></div>
-    </div>
-  </div>
+  <% end %>
 <% end %>
 
-<ul role="list" class="divide-y divide-gray-200 -mx-6 -mb-6">
+<ul role="list" class="divide-y divide-gray-200 -m-6">
   <% @usergroups.each do |group| %>
     <%= render 'usergroups/group', group: group %>
   <% end %>
