Mobile friendly again

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <%= render 'layouts/nav' %>
 
         <% if content_for?(:title) %>
-          <header class="pt-2 pb-4 lg:pt-8 lg:pb-12">
+          <header class="pt-8 pb-12">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
               <div class="flex flex-wrap">
                 <div class="flex-auto mr-2">
