--- a/app/views/usergroups/_member_list.html.erb
+++ b/app/views/usergroups/_member_list.html.erb
@@ -2,7 +2,7 @@
   <% users.each do |user| %>
     <li>
       <%= link_to user do %>
-        <div class="flex items-center py-5 px-4 rounded-lg hover:bg-gray-50">
+        <div class="flex items-center py-5 px-4 hover:bg-gray-50">
           <div class="min-w-0 flex-1 flex items-center">
             <div class="flex-shrink-0">
               <%= gravatar_for user, class: "h-12 w-12 rounded-full group-hover:opacity-75", alt: user.name %>
