--- a/app/views/usergroups/show.html.erb
+++ b/app/views/usergroups/show.html.erb
@@ -27,10 +27,10 @@
   </span>
 <% end %>
 
-<div class="-m-6">
+<div class="-m-5 sm:-m-6">
   <div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
     <div>
-      <div class="sm:hidden">
+      <div class="sm:hidden m-4">
         <label for="tabs" class="sr-only">Select a tab</label>
         <select id="tabs" name="tabs" class="block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
           <option data-action="click->tabs#change" data-index="0">Huidige leden</option>
