--- a/app/views/usergroups/show.html.erb
+++ b/app/views/usergroups/show.html.erb
@@ -3,12 +3,12 @@
 <% end %>
 
 <% content_for :subtitle do %>
-  <div class="mt-2 flex items-center text-sm text-gray-400">
+  <div class="flex items-center text-sm text-gray-400">
     <%= heroicon('calendar', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
     Aangemaakt op <%= @usergroup.created_at.strftime("%d-%m-%Y") %>
   </div>
 
-  <div class="mt-2 flex items-center text-sm text-gray-400">
+  <div class="flex items-center text-sm text-gray-400">
     <%= heroicon('users', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
     <%= pluralize @usergroup.users.count, 'leden', locale: :nl %>
   </div>
