--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <%= render 'layouts/nav' %>
 
         <% if content_for?(:title) %>
-          <header class="pt-8 pb-12">
+          <header class="py-8">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
               <div class="flex flex-wrap">
                 <div class="flex-auto mr-2">
@@ -23,7 +23,7 @@
                     <%= yield :title %>
                   </h1>
                   <% if content_for?(:subtitle) %>
-                    <div class="mt-1 flex flex-col -mb-6 sm:flex-row sm:flex-wrap sm:mt-0 sm:space-x-6">
+                    <div class="flex flex-col my-2 sm:flex-row sm:flex-wrap sm:space-x-6">
                       <%= yield :subtitle %>
                     </div>
                   <% end %>
