--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                   <% end %>
                 </div>
                 <div class="flex-row-reverse max-w-md place-self-center">
-                  <%= yield :search %>
+                  <%= yield :options %>
                 </div>
               </div>
             </div>
