--- a/app/views/usergroups/show.html.erb
+++ b/app/views/usergroups/show.html.erb
@@ -14,7 +14,7 @@
   </div>
 <% end %>
 
-<% content_for :search do %>
+<% content_for :options do %>
   <span class="inline-flex">
   <% if current_user.admin? %>
     <%= link_to 'Wijzig groep', edit_usergroup_path(@usergroup), class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
