--- a/app/views/usergroups/_form.html.erb
+++ b/app/views/usergroups/_form.html.erb
@@ -1,9 +1,21 @@
-<%= form_for @group, html: { id: 'usergroup-form', class: 'space-y-6 space-y mb-6 md:mx-32 lg:mx-48 xl:mx-64' } do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-  <div class="mt-1 flex rounded-md shadow-sm">
-    <div class="relative flex items-stretch flex-grow focus-within:z-10">
-      <%= f.text_field :name, placeholder: 'Groepnaam', class: 'focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full rounded-none rounded-l-md sm:text-sm border-gray-300' %>
+<%= form_for @usergroup, html: {class: 'space-y-2 space-y'} do |f| %>
+  <% if @usergroup.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@usergroup.errors.count, 'error') %> prohibited this beer from being saved:</h2>
+
+      <ul>
+        <% @usergroup.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
     </div>
-    <%= f.submit 'Opslaan', class: 'cursor-pointer -ml-px relative inline-flex items-center space-x-2 px-4 py-2 border border-gray-300 text-sm font-medium rounded-r-md text-gray-700 bg-gray-50 hover:bg-gray-100 focus:outline-none focus:ring-1 focus:ring-hamers-red-500 focus:border-hamers-red-500' %>
-  </div>
+  <% end %>
+
+  <%= f.label :name, class: label_classes %>
+  <%= f.text_field :name, class: input_classes %>
+
+  <%= f.label :signal_url, class: label_classes %>
+  <%= f.text_field :signal_url, class: input_classes %>
+
+  <%= f.submit :Opslaan, class: submit_classes %>
 <% end %>
