--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,126 +1,71 @@
-<div class="row">
-  <aside class="col-md-5">
-    <section>
-      <h1>
-        <%= gravatar_for @user, size: 96 %>
-        <%= @user.name %>
-      </h1>
-    </section>
+<% content_for :title do %>
+  <% @user.name %>
+<% end %>
 
-    <% if current_user.admin? %>
-      <section>
-        <h4>Wijzig lichting</h4>
-        <%= form_for @user, url: users_path(@user), html: { class: 'form-inline' } do |f| %>
-          <%= f.number_field :batch, class: "form-control input-sm" %>
-          <%= f.submit "Opslaan", class: "btn btn-default btn-sm" %>
-        <% end %>
-      </section>
-    <% end %>
-
-    <% if @user.lid? %>
-      <% unless @missed_drinks.empty? %>
-        <section>
-          <h4>Gemiste Zondagborrels</h4>
-          <ul>
-            <% @missed_drinks.each do |md| %>
-              <li><%= link_to md.date.strftime("%d-%m-%Y"), md %><br></li>
-            <% end %>
-          </ul>
-        </section>
-      <% end %>
-    <% end %>
-
-    <section>
-      <h4>Stats</h4>
-      <table class="table table-hover table-striped">
-        <tr>
-          <td>Aantal quotes</td>
-          <td><%= @user.quotes.count %></td>
-        </tr>
-        <tr>
-          <td>Aantal reviews</td>
-          <td><%= @user.reviews.count %></td>
-        </tr>
-        <tr>
-          <td>Aantal evenementen georganiseerd</td>
-          <td><%= @user.events.count %></td>
-        </tr>
-        <tr>
-          <td>Aantal blogposts geschreven</td>
-          <td><%= @user.blogitems.count %></td>
-        </tr>
-        <tr>
-          <td>Aantal vergaderingen bijgewoond</td>
-          <td><%= @user.meetings_attended.count %></td>
-        </tr>
-        <tr>
-          <td>Aantal vergaderingen voorgezeten</td>
-          <td><%= @user.meetings_chaired.count %></td>
-        </tr>
-        <tr>
-          <td>Aantal vergaderingen genotuleerd</td>
-          <td><%= @user.meetings_minuted.count %></td>
-        </tr>
-        <tr>
-          <td>Gemiddeld review cijfer</td>
-          <td>
-            <% if @user.weight %>
-              <%= @user.weight.round(2) %>
-            <% else %>
-              Nog onbekend
-            <% end %>
-          </td>
-        </tr>
-
-        <% if @user.lid? %>
-          <tr>
-            <td>Sunday ratio</td>
-            <td><%= @user.sunday_ratio.round(2) %></td>
-          </tr>
-        <% end %>
-
-        <tr>
-          <td>Account aangemaakt</td>
-          <td><%= @user.created_at.strftime('%d-%m-%Y') %></td>
-        </tr>
-
-        <% if @user.current_sign_in_at %>
-          <tr>
-            <td>Tijdstip huidige login</td>
-            <td><%= @user.current_sign_in_at.strftime('%d-%m-%Y %H:%M') %></td>
-          </tr>
-          <tr>
-            <td>IP huidige login</td>
-            <td><%= @user.current_sign_in_ip %></td>
-          </tr>
-        <% end %>
-
-        <% if @user.last_sign_in_at %>
-          <tr>
-            <td>Tijdstip laatste login</td>
-            <td><%= @user.last_sign_in_at.strftime('%d-%m-%Y %H:%M') %></td>
-          </tr>
-          <tr>
-            <td>IP laatste login</td>
-            <td><%= @user.last_sign_in_ip %></td>
-          </tr>
-        <% end %>
-      </table>
-    </section>
-
-  </aside>
-
-  <div class="col-md-7">
-    <% if @user.quotes.any? %>
-      <h2>Quotes</h2>
-      <ol class="microposts">
-        <%= render partial: 'quotes/quote_stripped', collection: @quotes, as: :quote %>
-      </ol>
-      <%= render 'shared/pagination/default' %>
-    <% end %>
+<% content_for :subtitle do %>
+  <div class="flex items-center text-sm text-gray-400">
+    <%= heroicon('calendar', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
+    Lid sinds <%= @user.lid_since.strftime("%d-%m-%Y") %>
   </div>
 
+  <div class="flex items-center text-sm text-gray-400">
+    <%= heroicon('users', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
+    Lichting <%= @user.batch %>
+  </div>
+<% end %>
+
+
+<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+  <aside class="md:col-span-4 md:pr-6">
+    <div class="mt-6">
+      <%= gravatar_for @user, size: 96, class: "h-12 w-12 rounded-full" %>
+
+      <div class="mt-5 -mx-6 border-t border-gray-200">
+        <div>
+          <% if @user.lid? %>
+            <% unless @missed_drinks.empty? %>
+              <h4>Gemiste Zondagborrels</h4>
+              <ul>
+                <% @missed_drinks.each do |md| %>
+                  <li><%= link_to md.date.strftime("%d-%m-%Y"), md %><br></li>
+                <% end %>
+              </ul>
+              <% end %>
+          <% end %>
+        </div>
+
+        <dl class="sm:divide-y sm:divide-gray-200">
+          <% specs = {
+            "Aantal quotes": @user.quotes.count,
+            "Aantal reviews": @user.reviews.count,
+            "Gemiddeld reviewcijfer": @user.average_review_grade,
+            "Aantal eventementen georganiseerd": @user.blogitems.count,
+            "Aantal blogposts geschreven": @user.blogitems.count,
+            "Aantal vergaderingen bijgewoond": @user.meetings_attended.count,
+            "Aantal vergaderingen voorgezeten": @user.meetings_chaired.count,
+            "Aantal vergaderingen genotuleerd": @user.meetings_minuted.count,
+          } %>
+          <% specs.each do |name, value| %>
+            <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
+              <dt class="mx-6 text-sm font-medium text-gray-500 0 sm:col-span-2">
+                <%= name %>
+              </dt>
+              <dd class="mx-6 mt-1 text-sm text-gray-900 sm:mt-">
+                <%= value %>
+              </dd>
+            </div>
+          <% end %>
+        </dl>
+      </div>
+    </div>
+  </aside>
+
+  <div class="md:col-span-8 md:pl-6">
+    <div class="overflow-hidden border-b sm:rounded-t-md">
+      <ul role="list" class="divide-y divide-gray-200">
+        <%= render @user.quotes %>
+      </ul>
+    </div>
+  </div>
 </div>
 
-<!-- Lelijk maar ff handig voor debuggen. Deze pagina moet nog helemaal herschreven worden dus is moeite nu niet waard om het er goed in te zetten. -->
-<%= @user.lid_since %>
