Make table rows clickable and some cleanup

--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -8,6 +8,6 @@
   <% end %>
 <% end %>
 
-<ul role="list" class="divide-y divide-gray-200 -m-6">
+<ul role="list" class="divide-y divide-gray-200 -m-6 rounded-xl">
   <%= render @usergroups %>
 </ul>
