remove focus ring offset

--- a/app/views/blogitems/show.html.erb
+++ b/app/views/blogitems/show.html.erb
@@ -63,6 +63,6 @@
 
 <div class="flex justify-center">
   <% unless current_user&.active? %>
-    <%= button_to "Terug naar het overzicht", blogitems_path, method: :get, class: "cursor-pointer inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-base font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500" %>
+    <%= button_to "Terug naar het overzicht", blogitems_path, method: :get, class: "cursor-pointer inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-base font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
   <% end %>
 </div>
