--- a/app/views/blogitems/edit.html.erb
+++ b/app/views/blogitems/edit.html.erb
@@ -1,7 +1,5 @@
 <% content_for :title do %>
-    Wijzig blog post
+    <%= @item.title %> aanpassen
 <% end %>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', blogitems_path, class: 'btn btn-default' %>
