--- a/app/views/blogitems/index.html.erb
+++ b/app/views/blogitems/index.html.erb
@@ -2,27 +2,37 @@
   Blog
 <% end %>
 
-<% @items.each do |item| %>
-  <div class="bs-calltoaction bs-calltoaction-default">
-    <div class="row">
-      <%= link_to item do %>
-        <div class="col-md-12 cta-contents">
-          <h1 class="cta-title"><%= item.title %></h1>
-          <div class="cta-desc">
-            <p><%= truncate(strip_tags(item.body.to_s), length: 200) %></p>
-          </div>
+<% content_for :options do %>
+  <%= button_to "Nieuwe blogpost", new_blogitem_path, method: :get, class: "cursor-pointer px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+<% end %>
+
+<div class="grid gap-16 lg:grid-cols-3 lg:gap-x-5 lg:gap-y-12">
+  <% @items.each do |item| %>
+  <div>
+    <%= link_to item do %>
+      <p class="text-xl font-semibold text-gray-900">
+        <%= item.title %>
+      </p>
+      <p class="mt-3 text-base text-gray-500">
+        <%= truncate(strip_tags(item.body.to_s), length: 150) %>
+      </p>
+    <% end %>
+    <div class="mt-6 flex items-center">
+      <div class="flex-shrink-0">
+        <span class="sr-only"><%= item.user.name %></span>
+        <%= gravatar_for item.user, class: "h-10 w-10 rounded-full" %>
+      </div>
+      <div class="ml-3">
+        <p class="text-sm font-medium text-gray-900">
+          <%= item.user.name %>
+        </p>
+        <div class="flex space-x-1 text-sm text-gray-500">
+          <time datetime="<%= item.created_at.strftime("%d-%m-%Y") %>">
+            <%= item.created_at.strftime("%d-%m-%Y") %>
+          </time>
         </div>
-      <% end %>
+      </div>
     </div>
   </div>
-<% end %>
-<% if current_user&.lid? || current_user&.alid? %>
-  <% unless @items.any? %>
-    <h4> Helaas, er zijn (nog) geen blogposts. </h4>
   <% end %>
-  <%= link_to 'Schrijf een blogpost!', new_blogitem_path, class: 'btn btn-block btn-primary' %>
-<% else
-     unless @items.any? %>
-    <h4> Helaas, er zijn (nog) geen publieke blogposts. </h4>
-  <% end %>
-<% end %>
+</div>
