Remove extra /div, remove hover and fix lines

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -24,7 +24,7 @@
 <% end %>
 
 <div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
-  <div class="-mx-6 md:col-span-9 md:pr-6">
+  <div class="-mx-5 sm:-mx-6 md:col-span-9 md:pr-6">
     <div class="overflow-hidden border-b sm:rounded-t-md">
       <ul role="list" class="divide-y divide-gray-200">
         <%= render @reviews %>
@@ -76,5 +76,4 @@
       </div>
     </div>
   </aside>
-</div>
 </div>
