--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <div class="block hover:bg-gray-50">
+  <div class="block">
     <div class="flex items-center px-4 py-4 sm:px-6">
       <div class="min-w-0 flex-1 flex items-center">
         <div class="flex-grow-0">
