Rename Zondagborrels to Woensdagborrels in userpage (#296)
* Rename Zondagborrels to Woensdagborrels in userpage

* Use generic name for drink

Co-authored-by: dexbleeker <dex@bleeker.nl>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,7 +34,7 @@
     <% if @user.lid? %>
       <% unless @missed_drinks.empty? %>
         <section>
-          <h4>Gemiste Zondagborrels</h4>
+          <h4>Gemiste Dispuutsborrels</h4>
           <ul>
             <% @missed_drinks.each do |md| %>
               <li><%= link_to md.date.strftime("%d-%m-%Y"), md %><br></li>
